examples/test/testpolicy18211.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18211
  namespace: namespace398
spec:
  podSelector:
    matchLabels:
      key34: value10
      key23: value17
      key35: value15
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key47: value22
          key15: value23
          key28: value21
      podSelector:
        matchLabels:
          key18: value45
